Issue #21931: Fix error handling in msilib.FCICreate().

Patch by Jeffrey Armstrong.